SPACING FIXED

--- a/src/index.css
+++ b/src/index.css
@@ -18,30 +18,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 600;
-  text-decoration: inherit;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+/* DEBUG SPACINGS HERE */
+/* * {
+  outline: 1px solid #f00 !important;
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #000;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
